Add favicon images and enhance HTML metadata for CV

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Aries Tagle CV, includes skills, education, experience, and info on the net" />
+    <meta property="og:title" content="Aries Tagle CV" />
+    <meta property="og:description" content="Aries Tagle CV, includes skills, education, experience, and info on the net" />
     <title>Aries Tagle CV</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./favicon_io/favicon-32x32.png" type="image/x-icon" />
   </head>
   <body>
     <hr />
